k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:  #used by alb con to configure lb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip #send dir to pod ip as pod ip are vpc ip(vpc cni) directly routable #controller +ingress+service giev tehs ip and controlelr continously watches and upadte sthe ips target group
    alb.ingress.kubernetes.io/group.name: backendmicro

    # Preserve the original client IP in the HTTP request #aws lb default behaviour adds x-forwarded-for when proxying
    
       # ALB listens on HTTP + HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    #alb.ingress.kubernetes.io/ssl-redirect: "443"
    # ACM certificate
    alb.ingress.kubernetes.io/certificate-arn: <ACM-CERTIFICATE-ARN>     #put your acm certifcate
    alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: alb
  rules:
    - host: api.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-gateway
                port:
                  number: 80
